prusti-tests/tests/verify_overflow/ui/counterexamples/int.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/int.rs:5:11
  |
5 | #[ensures(result != 86)]
  |           ^^^^^^^^^^^^
  |
note: the error originates here
 --> $DIR/int.rs:6:1
  |
6 | / fn test1(x: i32) -> i32 {
7 | |     let y = x + 1;
8 | |     y * 2
9 | | }
  | |_^
note: counterexample for "x"
       value:   42
 --> $DIR/int.rs:6:10
  |
6 | fn test1(x: i32) -> i32 {
  |          ^
note: counterexample for "y"
       value:   43
 --> $DIR/int.rs:7:13
  |
7 |     let y = x + 1;
  |             ^^^^^
note: counterexample for "result"
       value:   86
 --> $DIR/int.rs:8:5
  |
8 |     y * 2
  |     ^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/int.rs:13:11
   |
13 | #[ensures(result != 42)]
   |           ^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/int.rs:14:1
   |
14 | / fn test2(x: i32) -> i32 {
15 | |     x + 21
16 | | }
   | |_^
note: counterexample for "x"
       value:   21
  --> $DIR/int.rs:14:10
   |
14 | fn test2(x: i32) -> i32 {
   |          ^
note: counterexample for "result"
       value:   42
  --> $DIR/int.rs:15:5
   |
15 |     x + 21
   |     ^^^^^^

error: aborting due to 2 previous errors

